- Fixed bug #28930 (PHP sources pick wrong header files generated by bison)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@176048 c90b9560-bf6c-de11-be94-00142212c4b1